--- a/gtpb_clientside/WEB-INF/templates/gui/pane2/pane2.vm
+++ b/gtpb_clientside/WEB-INF/templates/gui/pane2/pane2.vm
@@ -109,14 +109,14 @@
 	  #if($isNotTable||$view.loggedInUserAllowedTo('EDIT_TABLE_DATA',$sessionTable))
   	    <script language=Javascript>
          var jqDoc = $(top.document);
-   	     jqDoc.find('#button_new').removeAttribute('disabled');
-   	     jqDoc.find('#button_clone').removeAttribute('disabled');
-   	     jqDoc.find('#button_delete').removeAttribute('disabled');
-         jqDoc.find('#button_import').removeAttribute('disabled');
-   	     jqDoc.find('#button_export').removeAttribute('disabled');
-   	     jqDoc.find('#button_print').removeAttribute('disabled');
-         jqDoc.find('#button_apps').removeAttribute('disabled');
-         jqDoc.find('#button_forms').removeAttribute('disabled');
+   	     jqDoc.find('#button_new').removeAttr('disabled');
+   	     jqDoc.find('#button_clone').removeAttr('disabled');
+   	     jqDoc.find('#button_delete').removeAttr('disabled');
+         jqDoc.find('#button_import').removeAttr('disabled');
+   	     jqDoc.find('#button_export').removeAttr('disabled');
+   	     jqDoc.find('#button_print').removeAttr('disabled');
+         jqDoc.find('#button_apps').removeAttr('disabled');
+         jqDoc.find('#button_forms').removeAttr('disabled');
         </script>
       #else
       <script language=Javascript>
@@ -133,8 +133,8 @@
            jqDoc.find('#button_delete').setAttribute('disabled','true');
            jqDoc.find('#button_import').setAttribute('disabled','true');
         	 #if($view.loggedInUserAllowedTo('VIEW_TABLE_DATA',$sessionTable))
-	    	    jqDoc.find('#button_export').removeAttribute('disabled');
-   	     		jqDoc.find('#button_print').removeAttribute('disabled');
+	    	    jqDoc.find('#button_export').removeAttr('disabled');
+   	     		jqDoc.find('#button_print').removeAttr('disabled');
         	 #else
         		jqDoc.find('#button_export').setAttribute('disabled','true');
         		jqDoc.find('#button_print').setAttribute('disabled','true');
@@ -158,12 +158,12 @@
         #end
       var jqDoc = $(top.document);
     	#if(!$isNotTable)
-          jqDoc.find('#filter').removeAttribute('disabled');
+          jqDoc.find('#filter').removeAttr('disabled');
     	#end
     	## Enable the dashboard if relevant
-      jqDoc.find('#button_dashboard').removeAttribute('disabled');
-      jqDoc.find('#button_forms').removeAttribute('disabled');
-      jqDoc.find('#button_calendar').removeAttribute('disabled');
+      jqDoc.find('#button_dashboard').removeAttr('disabled');
+      jqDoc.find('#button_forms').removeAttr('disabled');
+      jqDoc.find('#button_calendar').removeAttr('disabled');
 		
 	  function loadPane3() {
 		  var url = 'AppController.servlet?return=$return';
