--- a/gtpb_clientside/WEB-INF/templates/gui/pane2/see_more_rows.vm
+++ b/gtpb_clientside/WEB-INF/templates/gui/pane2/see_more_rows.vm
@@ -30,9 +30,8 @@
     #else
       All $numRows records visible<br>
     #end
-    <a href="javascript:top.fExport();">export all...</a>
     #if($sessionReport.equals($sessionReport.getParentTable().getDefaultReport()))
-      &nbsp;<a href="javascript:top.fImport();">import...</a>
+      &nbsp;<a href="javascript:top.fImport();">import data...</a>
     #end
 ##    <div class="mini_action">
 ##      <a href="javascript:top.fExport();"><img src="resources/icons/applications/tango/actions/edit-redo.png">&nbsp;export...</a>
