--- a/gtpb_clientside/WEB-INF/templates/gui/administration/users/option_sets/user_details_data.vm
+++ b/gtpb_clientside/WEB-INF/templates/gui/administration/users/option_sets/user_details_data.vm
@@ -39,15 +39,14 @@
     </td>
   </tr>
   <tr>
-	<td>User type:</td>
+	<td>Initial view:<br>What the user will see on logging in</td>
 	<td>
 	  #set($sessionUserType = $sessionUser.getUserType())
-	  <select name="usertype" gtpb_internalusername="$sessionUser.getInternalUserName()" gtpb_update_user value="$sessionUserType" onchange="top.oBuffer.writeBuffer(this);">
-		<option value="EXTERNAL" #if($sessionUserType == "EXTERNAL") selected #end>External user - sees limited interface on login</option>
-    <option value="DATA_INPUT" #if($sessionUserType == "DATA_INPUT") selected #end>Data input - sees cards interface on login</option>
-    <option value="OPERATIONAL" #if($sessionUserType == "OPERATIONAL") selected #end>Operational - sees standard interface on login</option>
-		<option value="MANAGERIAL" #if($sessionUserType == "MANAGERIAL") selected #end>Managerial - sees standard interface on login</option>
-		<option value="EXECUTIVE" #if($sessionUserType == "EXECUTIVE") selected #end>Executive - sees dashboard on login</option>
+	  <select name="initialview" gtpb_internalusername="$sessionUser.getInternalUserName()" gtpb_update_user value="$sessionUserType" onchange="top.oBuffer.writeBuffer(this);">
+		<option value="LIMITED" #if($sessionUserType == "LIMITED") selected #end>Limited - for external users outside the company</option>
+    <option value="REPORT" #if($sessionUserType == "REPORT") selected #end>Full height report view</option>
+    <option value="FULL" #if($sessionUserType == "FULL") selected #end>Full three pane interface</option>
+		<option value="EXECUTIVE_DASHBOARD" #if($sessionUserType == "EXECUTIVE_DASHBOARD") selected #end>Executive dashboard</option>
 	  </select>
 	</td>
   </tr>
