--- a/gtpb_clientside/WEB-INF/templates/gui/display_application.vm
+++ b/gtpb_clientside/WEB-INF/templates/gui/display_application.vm
@@ -44,11 +44,11 @@
       <script language="JavaScript" type="text/javascript">
 	        function fSummaryPaneReady() {				 
 	          // return the status of the summary pane by examining its readystate
-						          with (oViewPane){  
-						            		if (document.readyState != 'complete') return false;
-  					          			if (detail_pane.document.readyState != 'complete') return false;
-  						        }
-  						        return true;
+	          with (oViewPane){  
+	            		if (document.readyState != 'complete') return false;
+	          			if (detail_pane.document.readyState != 'complete') return false;
+		        }
+		        return true;
         	}
         	
         	function fNew() {  
@@ -67,17 +67,17 @@
         	  document.getElementById('oViewPane').contentWindow.pane_2.fImport();
         	}
 			
-			function fHelp() {
-			  document.getElementById('oViewPane').contentWindow.pane_2.fHelp();
-			}
+    			function fHelp() {
+    			  document.getElementById('oViewPane').contentWindow.pane_2.fHelp();
+    			}
 
         	function fExport() {  
         	  document.getElementById('oViewPane').contentWindow.pane_2.fExport();
         	}
 			
-			function fSetPassword() {
-			  document.getElementById('oViewPane').contentWindow.pane_2.fSetPassword();
-			}
+    			function fSetPassword() {
+    			  document.getElementById('oViewPane').contentWindow.pane_2.fSetPassword();
+    			}
         	
         	function fLinks() {  
         	  document.getElementById('oViewPane').contentWindow.pane_2.fLinks();
@@ -91,23 +91,23 @@
               var oPrintWin=window.spawnWindow('AppController.servlet?return=gui/dashboard','info_window','toolbar=no,location=no,directories=no,status=no,copyhistory=no,menubar=no,resizable=yes,dialog=yes')	
         	}
 			
-      function fDashboard() {
-        document.location = 'AppController.servlet?return=gui/customisations/common/dashboard/dashboard';
-      }
+          function fDashboard() {
+            document.location = 'AppController.servlet?return=gui/customisations/common/dashboard/dashboard';
+          }
+            
+          function fForms() {
+            document.location = 'AppController.servlet?return=gui/edit_nav/edit_nav';
+          }
+            
+          function fCalendar() {
+            document.location = 'AppController.servlet?return=gui/calendar/calendar';
+          }
+          
+          function fAppStore() {
+            document.getElementById('oViewPane').contentWindow.pane_2.fAppStore();
+          }
         
-      function fForms() {
-        document.location = 'AppController.servlet?return=gui/edit_nav/edit_nav';
-      }
-        
-      function fCalendar() {
-        document.location = 'AppController.servlet?return=gui/calendar/calendar';
-      }
-      
-      function fAppStore() {
-        document.getElementById('oViewPane').contentWindow.pane_2.fAppStore();
-      }
-        
-            function fSpawnWindow(sURL,sName,sParams) {
+          function fSpawnWindow(sURL,sName,sParams) {
         	  function fDestroyWin() {
         	    oNewWin.close();
         	  }
@@ -118,17 +118,17 @@
 	            $(oDiv).addClass('window_disable');
 	            
 	            oH1=document.createElement('h1');
-				oH1.appendChild(document.createTextNode('another window is open...'));
-				oDiv.appendChild(oH1);
+      				oH1.appendChild(document.createTextNode('another window is open...'));
+      				oDiv.appendChild(oH1);
 	          
 	            document.body.appendChild(oDiv);
 	            return oDiv;	
 	          }
 	        	   
 	          function fEnableApp() {
-	        	// the unload event seems to trigger immediately.  Check that the window's closed so that this is called correctly
-	        	if(!oNewWin.closed) return;
-	        	clearInterval(sInterval);
+  	        	// the unload event seems to trigger immediately.  Check that the window's closed so that this is called correctly
+  	        	if(!oNewWin.closed) return;
+  	        	clearInterval(sInterval);
 	            oBlank.parentNode.removeChild(oBlank);	
         	  }
         	  
@@ -150,63 +150,66 @@
 
         	  var sInterval=setInterval(fEnableApp,2000); // if the print window is refreshed, it won't re-enable the app.  Use the timeout to check that the window is still open
         	  return oNewWin;
-        	}
-        	  	
-        window.spawnWindow=fSpawnWindow;
+        	} // End of fSpawnWindow
+        	  
+        $(document).ready(function() {
+          window.spawnWindow=fSpawnWindow;
+          document.getElementById('oViewPane').contentWindow.document.getElementById('rowsWrapper').rows=fRowsVal();                       
+        });
       </script>  
     </head>
-	<body #if($viewTools.isRunningLocally()) class="localhost" #end>	
-    	      <div id=toolbarDiv>
-			        <div class=buttonGroup> ## record actions
-			          #parse('gui/toolbar/buttons/new.vm')
-			          #parse('gui/toolbar/buttons/clone.vm')
-			          #parse('gui/toolbar/buttons/delete.vm')
-			        </div>
-			        <div class=buttonGroup> ## display preferences
-			          #parse('gui/toolbar/buttons/pane1.vm')
-					      #parse('gui/toolbar/buttons/pane2.vm')
-			          #parse('gui/toolbar/buttons/pane3.vm')
-              </div>
-              <div class=buttonGroup> ## display preferences
-                #parse('gui/toolbar/buttons/filter.vm')
-                #parse('gui/toolbar/buttons/print.vm')
-                #parse('gui/toolbar/buttons/export.vm')
-			        </div>
+	  <body #if($viewTools.isRunningLocally()) class="localhost" #end>	
+    <div id=toolbarDiv>
+      <div class=buttonGroup> ## record actions
+        #parse('gui/toolbar/buttons/new.vm')
+        #parse('gui/toolbar/buttons/clone.vm')
+        #parse('gui/toolbar/buttons/delete.vm')
+      </div>
+      <div class=buttonGroup> ## display preferences
+        #parse('gui/toolbar/buttons/pane1.vm')
+	      #parse('gui/toolbar/buttons/pane2.vm')
+        #parse('gui/toolbar/buttons/pane3.vm')
+      </div>
+      <div class=buttonGroup> ## display preferences
+        #parse('gui/toolbar/buttons/filter.vm')
+        #parse('gui/toolbar/buttons/print.vm')
+        #parse('gui/toolbar/buttons/export.vm')
+      </div>
 ##		          <div class=buttonGroup> ## import/export
-		            ## #parse('gui/toolbar/buttons/links.vm')
-		            ## #parse('gui/toolbar/buttons/import.vm')
+        ## #parse('gui/toolbar/buttons/links.vm')
+        ## #parse('gui/toolbar/buttons/import.vm')
 ##		          </div>
-			        <div class=buttonGroup> ## external applications, built in and customised
-			          ## #parse('gui/toolbar/buttons/wiki.vm')
-            #set($apps = $company.getApps())
-            #if($apps.contains("forms"))
-              #parse("gui/toolbar/buttons/forms.vm")
-            #end
-            #if($apps.contains("calendar"))
-              #parse('gui/toolbar/buttons/calendar.vm')
-            #end
-            #if($apps.contains("dashboard"))
-					    #parse('gui/toolbar/buttons/dashboard.vm')
-            #end
-            #parse('gui/toolbar/buttons/apps.vm')
-	          #set($sessionContext = $sessionData.getContext().toString())
-	          #if($sessionContext == "SYSADMIN")
-	            #parse('gui/toolbar/buttons/dev_tools.vm')
-	          #end
-	          #if($view.usesToolbarPlugin())
-	            #set($toolbarPluginName = $view.getToolbarPluginName())
-	            #parse("gui/plugins/$toolbarPluginName/toolbar.vm")
-	          #end
-		        </div>
-					<div id="logout">
-						##<img style="float:left" src="resources/toolbar/logout_left.png">
-						<span>
-              <a onclick="fHelp();" href="#" title="load help centre to view documentation or ask a question">help</a>
-						  <span style="color:white">|</span> 
-						  <a href="AppController.servlet?return=boot&logout=true">logout</a>
-						</span>
-					</div>
-		      </div>
-		      <iframe id="oViewPane" name="oViewPane" src="AppController.servlet?return=gui/display_panes" frameborder=no scrolling=yes></iframe>
+      <div class=buttonGroup> ## external applications, built in and customised
+        ## #parse('gui/toolbar/buttons/wiki.vm')
+      #set($apps = $company.getApps())
+      #if($apps.contains("forms"))
+        #parse("gui/toolbar/buttons/forms.vm")
+      #end
+      #if($apps.contains("calendar"))
+        #parse('gui/toolbar/buttons/calendar.vm')
+      #end
+      #if($apps.contains("dashboard"))
+		    #parse('gui/toolbar/buttons/dashboard.vm')
+      #end
+      #parse('gui/toolbar/buttons/apps.vm')
+      #set($sessionContext = $sessionData.getContext().toString())
+      #if($sessionContext == "SYSADMIN")
+        #parse('gui/toolbar/buttons/dev_tools.vm')
+      #end
+      #if($view.usesToolbarPlugin())
+        #set($toolbarPluginName = $view.getToolbarPluginName())
+        #parse("gui/plugins/$toolbarPluginName/toolbar.vm")
+      #end
+    </div>
+		<div id="logout">
+			##<img style="float:left" src="resources/toolbar/logout_left.png">
+			<span>
+        <a onclick="fHelp();" href="#" title="load help centre to view documentation or ask a question">help</a>
+			  <span style="color:white">|</span> 
+			  <a href="AppController.servlet?return=boot&logout=true">logout</a>
+			</span>
+		</div>
+    </div>
+    <iframe id="oViewPane" name="oViewPane" src="AppController.servlet?return=gui/display_panes" frameborder=no scrolling=yes></iframe>
     </body>		
 </html>
