New jQuery debug

--- a/gtpb_clientside/WEB-INF/templates/gui/display_application.vm
+++ b/gtpb_clientside/WEB-INF/templates/gui/display_application.vm
@@ -33,9 +33,7 @@
     </style>		
 	<![endif]-->
     <link rel="icon" href="resources/icons/gtpb.ico" type="image/x-icon"> <!-- favicon -->
-    <title>
-      $view.getApplicationName() $view.getApplicationVersion() - $company_name
-    </title>
+    <title>$view.getApplicationName() $view.getApplicationVersion() - $company_name</title>
    	  <script src="resources/jquery.js" language="Javascript"></script>
 	  ## <script type="text/javascript" src="resources/fauxconsole.js"></script>	
       <script language=JavaScript src="resources/logger.js"></script>
