Clientside code to set initial view type based on user preferences

--- a/gtpb_clientside/WEB-INF/templates/gui/display_panes.vm
+++ b/gtpb_clientside/WEB-INF/templates/gui/display_panes.vm
@@ -50,7 +50,12 @@
   #else
   <frameset id=colsWrapper cols="250,*" border="5" frameborder="yes" framespacing="5">
 	<frame name="pane_1" id="pane_1" frameborder="no" scrolling="auto" src="AppController.servlet?return=gui/pane1">
-	<frameset id=rowsWrapper rows="*,*" border="5" frameborder="yes" framespacing="5">
+  #if($view.getLoggedInUser().getUserType() == "REPORT")
+    #set($rows = "*,0") ## full height pane 2
+  #else
+    #set($rows = "*,*") ## panes 2 and 3 both displayed
+  #end
+	<frameset id=rowsWrapper rows="$rows" border="5" frameborder="yes" framespacing="5">
 	  <!-- pane 2 and 3 loads will cascade from pane 1 -->
 	  <frame name="pane_2" id="pane_2" scrolling="auto" src=""> ##AppController.servlet?return=gui/resources/nothing
 	  <frame name="pane_3" id="pane_3" scrolling="no" src="">
