--- a/gtpb_clientside/WEB-INF/templates/gui/reports_and_tables/report_data.vm
+++ b/gtpb_clientside/WEB-INF/templates/gui/reports_and_tables/report_data.vm
@@ -91,7 +91,7 @@
 	  #elseif($table_part_only)
       #set($click="loadIntoPanel('$sessionReport.getInternalReportName()', $datarow.getRowId())")##
     #else
-      #set($click="loadIntoPane3('AppController.servlet?return=$return&set_row_id=$datarow.getRowId()', $datarow.getRowId(), $numberOfTabs)")##
+      #set($click="loadIntoPane3('AppController.servlet?return=$return&set_row_id=$datarow.getRowId()', $datarow.getRowId(), $numberOfTabs);showPane3IfNecessary();")##
 	  #end##
 	#end##
     #set($uniqueid=$datarow.getRowId())##
