Initial clientside support for comments: debug

--- a/gtpb_clientside/WEB-INF/templates/gui/resources/input/comments.vm
+++ b/gtpb_clientside/WEB-INF/templates/gui/resources/input/comments.vm
@@ -1,6 +1,7 @@
 #if(!$field)
   #set($field = $sessionData.getCustomField("comment"))
 #end
+Field is $field
 #foreach($comment in $view.getComments($field))
   <div class="comment">
     <span class="comment_text">$comment.getText()</span> - $comment.getAuthor(), $comment.getTimestampString()
