Comment icon fadein

--- a/gtpb_clientside/resources/tabs/tabs.css
+++ b/gtpb_clientside/resources/tabs/tabs.css
@@ -445,6 +445,8 @@ img.cross_reference_image {
 
 .comment_toggle {
   opacity: 0;
+  margin-left: 1em;
+  transition-duration: 2s;
 }
 
 tr:hover .comment_toggle {
