--- a/gtpb_clientside/WEB-INF/templates/gui/resources/input/relation.vm
+++ b/gtpb_clientside/WEB-INF/templates/gui/resources/input/relation.vm
@@ -110,7 +110,7 @@
 	  #end
 	#end
   </div>##
-  ## TODO: move script to head
+  ## TODO: move script to head. In fact, check if it's still necessary for recent IEs
   ##<script language="JavaScript" src="resources/picker.js"></script>  
   <!--[if IE]>
     <style>
@@ -125,68 +125,6 @@
 
     </style>
   <![endif]-->
-  <style>   
-    div.relation_field input {
-      margin-right:10px;
-    }
-	
-	div.relation_field span {
-	  padding-right:10px;
-	}
-    
-    div.relation_field a {
-      font-size:8pt;
-      margin-right:15px;
-    }
-     
-    div.relation_picker {
-      display:inline;
-      background-color:white;
-      /*width:100%;*/
-	  max-width:100%;
-      height:100%;
-      position:absolute;
-      top:0;
-      left:0;
-      padding-top:30px;
-    }
-    
-    div.relation_picker div#toolbar {
-      border-bottom:1px solid black;
-      background-color:#F1F2ED;
-      position:absolute;
-      top:0;
-      left:0;
-      width:100%;
-      height:30px;
-      font-size:8pt;
-      padding:3px 10px;
-      z-index:999;
-    }
-    
-    div.relation_picker div#toolbar select {
-      margin:0;
-    }
-    
-    div.relation_picker div#toolbar a {
-      float:right;
-      color:black;
-      text-decoration:none;
-      margin-top:5px;
-    }
-    
-    div.relation_picker div#toolbar a:hover {
-      text-decoration:underline;
-    }
-    
-    div.relation_picker div#content {
-      position:relative;
-      height:100%;
-      /*width:100%;*/
-      overflow:scroll;
-    }
-    
-  </style>
   
   #if(($field.getNotNull()) && ($tableDataRow.get($field).isNull()) && (!$globalEdit))
     <span class="mandated">* Mandatory field - please enter a value</span>
