Comment style: debug

--- a/gtpb_clientside/WEB-INF/templates/gui/resources/input/comments.vm
+++ b/gtpb_clientside/WEB-INF/templates/gui/resources/input/comments.vm
@@ -3,6 +3,7 @@
 #end
 #foreach($comment in $view.getComments($field))
   <div class="comment">
-    <span class="comment_text" #if(($foreach.count % 2) == 0) style="text-align: right" #end>$foreach.count $comment.getText()</span> - $comment.getAuthor(), $comment.getTimestampString()
+    #set($t = $foreach.count % 2)
+    <span class="comment_text" #if(($foreach.count % 2) == 0) style="text-align: right" #end>$t $comment.getText()</span> - $comment.getAuthor(), $comment.getTimestampString()
   </div>
 #end
