--- a/gtpb_clientside/WEB-INF/templates/gui/resources/input/comments.vm
+++ b/gtpb_clientside/WEB-INF/templates/gui/resources/input/comments.vm
@@ -4,6 +4,6 @@
 #foreach($comment in $view.getComments($field))
   <div class="comment">
     #set($t = $foreach.count % 2)
-    <span class="comment_text" #if(($foreach.count % 2) == 0) style="text-align: right" #end>$t $comment.getText()</span> - $comment.getAuthor(), $comment.getTimestampString()
+    <span class="comment_text" #if($t == 0) style="text-align: right" #end>$comment.getText()</span> - $comment.getAuthor(), $comment.getTimestampString()
   </div>
 #end
