--- a/gtpb_clientside/WEB-INF/templates/gui/resources/input/comments.vm
+++ b/gtpb_clientside/WEB-INF/templates/gui/resources/input/comments.vm
@@ -2,7 +2,7 @@
   #set($field = $sessionData.getCustomField("comment"))
 #end
 #foreach($comment in $view.getComments($field))
-  <div class="comment" #if($foreach.count % 2 == 0) style="text-align: right" #end>
+  <div class="comment" #if($foreach.count % 2 == 0) style="margin-left: 2em" #end>
     <span class="comment_text">$comment.getText()</span> - $comment.getAuthor(), $comment.getTimestampString()
   </div>
 #end
