--- a/gtpb_clientside/WEB-INF/templates/gui/resources/input/comments.vm
+++ b/gtpb_clientside/WEB-INF/templates/gui/resources/input/comments.vm
@@ -3,6 +3,6 @@
 #end
 #foreach($comment in $view.getComments($field))
   <div class="comment" #if($foreach.count % 2 == 0) style="margin-left: 2em" #end>
-    <span class="comment_text">$comment.getText()</span> - $comment.getAuthor(), $comment.getTimestampString()
+    <span class="comment_text">$comment.getText()</span> <span class="comment_attribution">- $comment.getAuthor(), $comment.getTimestampString()</span>
   </div>
 #end
