--- a/gtpb_clientside/WEB-INF/templates/gui/resources/input/input.vm
+++ b/gtpb_clientside/WEB-INF/templates/gui/resources/input/input.vm
@@ -33,7 +33,7 @@
 #set($tabIndex = $tabIndex + 1)
 #parse("gui/resources/input/${fieldCategory.toString().toLowerCase()}.vm")
 #if($userCanEdit && (!$globalEdit))
-  <img src="resources/icons/comment.png" class="comment_toggle" />
+  <img src="resources/icons/comment.png" class="comment_toggle" title="add a comment" alt="add comment"/>
   ## Comments
   <div class="add_comment_row">Add comment: <input type="text" class="comment_input" rowid="$sessionRowId" internalfieldname="$field.getInternalFieldName()" internaltablename="$sessionTable.getInternalTableName()"/></div>
   <div class="comments" id="comments_$field.getInternalFieldName()">
