Test 0.5 opacity comment bubbles

--- a/gtpb_clientside/resources/tabs/tabs.css
+++ b/gtpb_clientside/resources/tabs/tabs.css
@@ -521,6 +521,10 @@ div.relation_field {
 }
 
 tr:hover .comment_toggle {
+  opacity: 0.5;
+}
+
+tr:hover .comment_toggle:hover {
   opacity: 1;
 }
 
