Show pane 3 on new or clone

--- a/gtpb_clientside/WEB-INF/templates/gui/display_application.vm
+++ b/gtpb_clientside/WEB-INF/templates/gui/display_application.vm
@@ -49,6 +49,10 @@
 		        return true;
         	}
         	
+          function showPane3IfNecessary() {
+            document.getElementById('oViewPane').contentWindow.pane_2.showPane3IfNecessary();
+          }
+          
         	function fNew() {  
         	  document.getElementById('oViewPane').contentWindow.pane_2.fNew();
         	} 
