--- a/gtpb_clientside/resources/tree/tree.css
+++ b/gtpb_clientside/resources/tree/tree.css
@@ -48,7 +48,7 @@ body{
 		}
 	
 		.modulecollapsed h2 span{
-			background-image: url(tree/expand.png);
+			/* background-image: url(tree/expand.png); */
 		}
 	
 		h2 img{
