Debug Elain's missing comments

--- a/gtpb_clientside/WEB-INF/templates/gui/resources/input/comments.vm
+++ b/gtpb_clientside/WEB-INF/templates/gui/resources/input/comments.vm
@@ -1,6 +1,9 @@
+## If field object not set
 #if(!$field.getFieldCategory())
   #set($field = $sessionData.getCustomField("comment"))
+  $viewTools.log("Getting field from sessionData: $field")
 #end
+$viewTools.log("Getting comments for field $field")
 #foreach($comment in $view.getComments($field))
   <div class="comment" #if($foreach.count % 2 == 0) style="margin-left: 2em" #end>
     <span class="comment_text">$comment.getText()</span> <span class="comment_attribution">- $comment.getAuthor(), $comment.getTimestampString()</span>
