--- a/gtpb_clientside/resources/display_application.css
+++ b/gtpb_clientside/resources/display_application.css
@@ -24,7 +24,11 @@ body {
 	border-bottom: 1px solid #cecece; /* 5px solid #eaba72; */
 	z-index: 1;
 	background-color: #f0f0f0; /* #f1f2ed; */
-	position: absolute;
+  background: -webkit-linear-gradient(top, white, #f0f0f0);
+  background: -moz-linear-gradient(top, white, #f0f0f0);
+  background: -ms-linear-gradient(top, white, #f0f0f0);
+  background: linear-gradient(top, white, #f0f0f0);
+  position: absolute;
 	left: 0px;
 	width: 100%;
 	overflow: hidden;
