--- a/gtpb_clientside/resources/button/button.css
+++ b/gtpb_clientside/resources/button/button.css
@@ -10,6 +10,7 @@ button.gtpb {
   /* background-color:#f0f0f0; */
   /* background: -moz-linear-gradient(top,  #fff,  #cecece); */
   text-shadow: 0px 1px 0px white;
+  float: left;
 }
 	 
 button.gtpb img { border:0; }
