--- a/gtpb_clientside/WEB-INF/templates/gui/display_application.vm
+++ b/gtpb_clientside/WEB-INF/templates/gui/display_application.vm
@@ -166,7 +166,7 @@
         #parse('gui/toolbar/buttons/clone.vm')
         #parse('gui/toolbar/buttons/delete.vm')
       </div>
-      <div class=buttonGroup> ## display preferences
+      <div class="buttonGroup" "joined"> ## display preferences
         #parse('gui/toolbar/buttons/pane1.vm')
 	      #parse('gui/toolbar/buttons/pane2.vm')
         #parse('gui/toolbar/buttons/pane3.vm')
