--- a/gtpb_clientside/resources/button/button.css
+++ b/gtpb_clientside/resources/button/button.css
@@ -17,12 +17,17 @@ button.gtpb img { border:0; }
 
 .buttonGroup.joined button.gtpb {
   border: 1px solid gray;
+  border-right: none;
+}
+
+.buttonGroup.joined button.gtpb:last-child {
+  border-right: 1px solid gray;
 }
 
 button.gtpb:hover { cursor: pointer; }		 
-button.gtpb:active { background-color: red; }
+button.gtpb:active { background-color: gray; }
 button.gtpb.selected {
-	background: -moz-linear-gradient(top, white, #cecece);
+	background: -moz-linear-gradient(top, gray, #cecece);
 }
 
 button.gtpb[disabled],
