--- a/gtpb_clientside/resources/button/button.css
+++ b/gtpb_clientside/resources/button/button.css
@@ -11,6 +11,7 @@ button.gtpb {
   /* background: -moz-linear-gradient(top,  #fff,  #cecece); */
   text-shadow: 0px 1px 0px white;
   float: left;
+  -moz-border-radius: 1em;
 }
 	 
 button.gtpb img { border:0; }
@@ -18,6 +19,7 @@ button.gtpb img { border:0; }
 .buttonGroup.joined button.gtpb {
   border: 1px solid #cecece;
   border-right: none;
+  -moz-border-radius:0;
 }
 
 .buttonGroup.joined button.gtpb:last-child {
