--- a/gtpb_clientside/resources/button/button.css
+++ b/gtpb_clientside/resources/button/button.css
@@ -6,12 +6,13 @@ button.gtpb {
   text-align:center;
   color:black;
   font-size:8pt;
-  background-color: transparent;
+  /* background-color: transparent; */
   /* background-color:#f0f0f0; */
   /* background: -moz-linear-gradient(top,  #fff,  #cecece); */
   text-shadow: 0px 1px 0px white;
   float: left;
   -moz-border-radius: 1em;
+  background: -moz-radial-gradient(center, ellipse cover, rgba(255,255,255,1) 0%, rgba(255,255,255,0) 100%);
 }
 	 
 button.gtpb img { border:0; }
