--- a/gtpb_clientside/resources/button/button.css
+++ b/gtpb_clientside/resources/button/button.css
@@ -6,13 +6,13 @@ button.gtpb {
   text-align:center;
   color:black;
   font-size:8pt;
-  /* background-color: transparent; */
-  /* background-color:#f0f0f0; */
-  /* background: -moz-linear-gradient(top,  #fff,  #cecece); */
   text-shadow: 0px 1px 0px white;
   float: left;
   -moz-border-radius: 1em;
   background: -moz-radial-gradient(center, ellipse cover, rgba(255,255,255,1) 0%, rgba(255,255,255,0) 100%);
+  background: -webkit-radial-gradient(center, ellipse cover, rgba(255,255,255,1) 0%,rgba(255,255,255,0) 100%);
+  background: -ms-radial-gradient(center, ellipse cover, rgba(255,255,255,1) 0%,rgba(255,255,255,0) 100%);
+  background: radial-gradient(center, ellipse cover, rgba(255,255,255,1) 0%,rgba(255,255,255,0) 100%);
 }
 	 
 button.gtpb img { border:0; }
@@ -37,8 +37,11 @@ button.gtpb img { border:0; }
 button.gtpb:hover { cursor: pointer; }		 
 button.gtpb:active { background-color: gray; }
 button.gtpb.selected {
-	background: -moz-linear-gradient(top, #cecece, #f4f4f4);
-	border: 1px solid #cecece;
+  background: -moz-linear-gradient(top, #cecece, #f4f4f4);
+  background: -webkit-linear-gradient(top, #cecece, #f4f4f4);
+  background: -ms-linear-gradient(top, #cecece, #f4f4f4);
+  background: linear-gradient(top, #cecece, #f4f4f4);
+  border: 1px solid #cecece;
 }
 
 button.gtpb[disabled],
