--- a/gtpb_clientside/WEB-INF/templates/gui/display_application.vm
+++ b/gtpb_clientside/WEB-INF/templates/gui/display_application.vm
@@ -62,16 +62,9 @@
         #parse('gui/toolbar/buttons/print.vm')
         #parse('gui/toolbar/buttons/export.vm')
       </div>
-##		          <div class=buttonGroup> ## import/export
-        ## #parse('gui/toolbar/buttons/links.vm')
-        ## #parse('gui/toolbar/buttons/import.vm')
-##		          </div>
-      <div class=buttonGroup> ## external applications, built in and customised
+      <div class="buttonGroup" style="float:right; margin-left:0; margin-right: 90px"> ## external applications, built in and customised
         ## #parse('gui/toolbar/buttons/wiki.vm')
       #set($apps = $company.getApps())
-      #if($apps.contains("forms"))
-        #parse("gui/toolbar/buttons/forms.vm")
-      #end
       #if($apps.contains("calendar"))
         #parse('gui/toolbar/buttons/calendar.vm')
       #end
