--- a/gtpb_clientside/resources/button/button.css
+++ b/gtpb_clientside/resources/button/button.css
@@ -9,6 +9,9 @@ button.gtpb {
   text-shadow: 0px 1px 0px white;
   float: left;
   -moz-border-radius: 1em;
+  -webkit-border-radius: 1em;
+  -ms-border-radius: 1em;
+  border-radius: 1em;
   background: -moz-radial-gradient(center, ellipse cover, rgba(255,255,255,1) 0%, rgba(255,255,255,0) 100%);
   background: -webkit-radial-gradient(center, ellipse cover, rgba(255,255,255,1) 0%,rgba(255,255,255,0) 100%);
   background: -ms-radial-gradient(center, ellipse cover, rgba(255,255,255,1) 0%,rgba(255,255,255,0) 100%);
@@ -21,17 +24,32 @@ button.gtpb img { border:0; }
   border: 1px solid #cecece;
   border-right: none;
   -moz-border-radius:0;
+  -webkit-border-radius:0;
+  -ms-border-radius:0;
+  border-radius:0;
 }
 
 .buttonGroup.joined button.gtpb:last-child {
   border-right: 1px solid #cecece;
   -moz-border-radius-topright: 1em;
   -moz-border-radius-bottomright: 1em;
+  -webkit-border-radius-topright: 1em;
+  -webkit-border-radius-bottomright: 1em;
+  -ms-border-radius-topright: 1em;
+  -ms-border-radius-bottomright: 1em;
+  border-radius-topright: 1em;
+  border-radius-bottomright: 1em;
 }
 
 .buttonGroup.joined button.gtpb:first-child {
   -moz-border-radius-topleft: 1em;
   -moz-border-radius-bottomleft: 1em;
+  -webkit-border-radius-topleft: 1em;
+  -webkit-border-radius-bottomleft: 1em;
+  -ms-border-radius-topleft: 1em;
+  -ms-border-radius-bottomleft: 1em;
+  border-radius-topleft: 1em;
+  border-radius-bottomleft: 1em;
 }
 
 button.gtpb:hover { cursor: pointer; }		 
